# SPA07Project

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  build.sh
cmake/: FindAutotester.cmake
lib/autotester/win/debug/: autotester.lib
lib/autotester/win/release/: autotester.lib
src/autotester/: CMakeLists.txt
src/autotester/src/: AbstractWrapper.h  TestWrapper.cpp  TestWrapper.h
src/autotester_gui/: CMakeLists.txt
src/autotester_gui/src/: GUIWrapper.cpp  GUIWrapper.h  codeeditor.cpp  codeeditor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/integration_testing/: CMakeLists.txt
src/integration_testing/src/: TestFrontEnd.cpp  TestPQLParseAndEvaluate.cpp  TestPQLPreprocessor.cpp  TestPQLProcessor.cpp  TestSimplePreprocessor.cpp
src/spa/: CMakeLists.txt
src/spa/src/: CFG.cpp  CFG.h  CFGBip.cpp  CFGBip.h  DesignExtractor.cpp  DesignExtractor.h  Entity.h  ExprParser.cpp  ExprParser.h  GeneralLexer.cpp  GeneralLexer.h  Lexer.cpp  Lexer.h  MergeTabels.cpp  MergeTables.cpp  MergeTables.h  Optimizer.cpp  Optimizer.h  PKB.cpp  PKB.h  PQLEvaluator.cpp  PQLEvaluator.h  PQLLexer.cpp  PQLLexer.h  PQLParser.cpp  PQLParser.h  PQLnewLexer.cpp  Parser.cpp  Parser.h  PqlEvaluator.cpp  PqlEvaluator.h  Query.cpp  Query.h  QueryToken.h  Relation.h  RelationTable.cpp  RelationTable.h  SIMPLEParser.cpp  SIMPLEParser.h  SPA.cpp  (+11 more)
src/spa/src/legacy/: DesignExtractor.cpp  DesignExtractor.h  Lexer.h  MergeTables.cpp  PQLEvaluator.cpp  PQLLexer.cpp  PQLLexer.h  PQLParser.cpp  Parser.cpp  Parser.h  Query.cpp  QueryToken.h  Token.h
src/unit_testing/: CMakeLists.txt
src/unit_testing/src/: Test.h  TestAST.cpp  TestASTBuilder.cpp  TestCFG.cpp  TestCFGBip.cpp  TestDesignExtractor.cpp  TestExprParser.cpp  TestGeneralLexer.cpp  TestLexer.cpp  TestPQLEvaluator.cpp  TestPQLLexer.cpp  TestPQLParser.cpp  TestPQLnewLexer .cpp  TestParser.cpp  TestPqlEvaluator.cpp  TestProcTable.cpp  TestSIMPLEParser.cpp  TestTNode.cpp  TestTable.cpp  TestToken.cpp  TestVarTable.cpp  Testing.cpp  main.cpp
src/unit_testing/src/legacy/: TestASTBuilder.cpp  TestDesignExtractor.cpp  TestLexer.cpp  TestPQLEvaluator.cpp  TestPQLParser.cpp
tests/: Complex-Nested-Queries.txt  Complex-Nested-Source.txt  Complex-Source-Queries.txt  Complex-Source.txt  Messy-Syntax-Source.txt  PQL-Source.txt  Sample-Queries.txt  Specificaiton-Source-Queries.txt  Specification-Source.txt  Stress-1000line-Queries.txt  Stress-100procedure-Queries.txt  Stress-100procedure.txt  Stress-Queries.txt  Stress-Source.txt  SystemTest1-Queries.txt  SystemTest1.txt  SystemTest2-Queries.txt  SystemTest2.txt  SystemTest3-Queries.txt  Trivial-Source.txt  affects_queries.txt  affects_source.txt  analysis.xsl  calls_queries.txt  calls_source.txt  out.xml  output.xml  prototype_sample_SIMPLE_source.txt  run.ps1  stress.xml  stress_queries.txt  stress_source.txt  test1_queries.txt  test1_source.txt
tests/legacy/: Complex-Nested-Source.txt  Complex-Source-Queries.txt  Complex-Source.txt  Harder-Source.txt  Messy-Syntax-Source-Queries.txt  Messy-Syntax-Source.txt  Sample-Queries.txt  Sample-Source.txt  Specification-Source-iter2.txt  Stress-100Proc.txt  Stress-Queries.txt  prototype_sample_SIMPLE_source.txt  test2_queries.txt  test2_source.txt
tests/trade test from 17/: iter1_Basic_queries.txt  iter1_Basic_source.txt  iter1_IfNestedinWhile_queries.txt  iter1_IfNestedinWhile_source - Copy.txt  iter1_IfNestedinWhile_source.txt  iter1_Validation_queries.txt  iter1_Validation_source - Copy.txt  iter1_Validation_source.txt  iter1_WhileNestedinIf_queries.txt  iter1_WhileNestedinIf_source - Copy.txt  iter1_WhileNestedinIf_source.txt  iter2_NextT_queries.txt  iter2_Next_queries.txt  iter2_Next_source_line.txt  iter2_calls_queries.txt  iter2_calls_source.txt  iter2_calls_source_line.txt  iter2_complex_calls_graph_queries.txt  iter2_complex_calls_graph_source_line.txt  iter2_complex_callst_graph_queries.txt  iter2_complex_callst_graph_source.txt  iter2_multiClauses_queries.txt  iter2_newFeatures_queries.txt  iter2_with_queries.txt  iter2_with_source.txt  iter2_with_source_line.txt  iter3_BOOLEAN_queries.txt  iter3_BOOLEAN_source.txt  iter3_BOOLEAN_source_line.txt  iter3_affectsT_queries.txt  iter3_affectsT_source.txt  iter3_affects_queries.txt  iter3_affects_source_line.txt  iter3_optimization1_queries.txt  iter3_optimization1_source.txt  iter3_optimization1_source_line.txt  iter3_patternAssign_queries.txt  iter3_patternAssign_source.txt  iter3_patternAssign_source_line.txt
